%% E069 - CQRS class diagram - Rulings module
%% Source: docs/architecture/legal-ai-ar-specs.md §4, docs/design/f1-6-api-rulings.md
classDiagram
    direction TB

    %% MediatR contracts
    class IRequest {
        <<interface>>
    }
    class IRequestHandler {
        <<interface>>
        +Handle(request, ct) TResponse
    }
    class IPipelineBehavior {
        <<interface>>
        +Handle(request, next, ct) TResponse
    }

    %% Queries
    class SearchRulingsQuery {
        +Query: string
        +Filters: SearchFilters?
        +Page: int
        +PageSize: int
    }
    class GetRulingByIdQuery {
        +Id: Guid
    }
    class GetRelatedRulingsQuery {
        +Id: Guid
        +Limit: int
    }

    %% Handlers
    class SearchRulingsHandler {
        -_search: ISearchService
        -_embeddings: IEmbeddingService
        -_mapper: IMapper
        +Handle(query, ct) SearchRulingsResult
    }
    class GetRulingByIdHandler {
        -_rulingRepo: IRulingRepository
        -_mapper: IMapper
        +Handle(query, ct) RulingDto
    }
    class GetRelatedRulingsHandler {
        -_search: ISearchService
        -_rulingRepo: IRulingRepository
        -_embeddings: IEmbeddingService
        -_mapper: IMapper
        +Handle(query, ct) RelatedRulingDto[]
    }

    %% Behaviors
    class ValidationBehavior {
        -_validators: IValidator[]
        +Handle(request, next, ct) TResponse
    }
    class LoggingBehavior {
        -_logger: ILogger
        +Handle(request, next, ct) TResponse
    }

    %% DTOs
    class SearchRulingsResult {
        +TotalCount: int
        +Page: int
        +PageSize: int
        +Results: RulingSearchResultDto[]
    }
    class RulingSearchResultDto {
        +Id: Guid
        +CaseTitle: string
        +Summary: string
        +Holding: string
        +RulingDate: DateOnly
        +JurisdictionArea: string
        +Instance: string
        +Court: string
        +Keywords: string[]
        +RulingDirection: string
        +RelevanceScore: float
        +HighlightedText: string?
    }
    class RulingDto {
        +Id: Guid
        +SourceId: int
        +ExternalId: string
        +CaseTitle: string
        +CaseNumber: string
        +RulingDate: DateOnly
        +Court: CourtDto
        +Judges: JudgeDto[]
        +Keywords: KeywordDto[]
        +Statutes: StatuteDto[]
        +Citations: CitationDto[]
        +...
    }
    class RelatedRulingDto {
        +Id: Guid
        +CaseTitle: string
        +RulingDate: DateOnly
        +JurisdictionArea: string
        +Instance: string
        +SimilarityScore: float
    }

    %% Services
    class ISearchService {
        <<interface>>
        +SearchAsync(embedding, filters, page, pageSize, ct)
        +GetRelatedAsync(rulingId, limit, ct)
    }
    class IEmbeddingService {
        <<interface>>
        +GenerateAsync(text, ct)
    }
    class IRulingRepository {
        <<interface>>
        +GetByIdAsync(id, ct)
    }
    class IMapper {
        <<interface>>
        +Map(source, destination)
    }

    %% Query implements IRequest
    SearchRulingsQuery --|> IRequest
    GetRulingByIdQuery --|> IRequest
    GetRelatedRulingsQuery --|> IRequest

    %% Handler implements IRequestHandler
    SearchRulingsHandler --|> IRequestHandler
    GetRulingByIdHandler --|> IRequestHandler
    GetRelatedRulingsHandler --|> IRequestHandler

    %% Handler handles Query
    SearchRulingsHandler ..> SearchRulingsQuery : handles
    SearchRulingsHandler ..> SearchRulingsResult : returns
    GetRulingByIdHandler ..> GetRulingByIdQuery : handles
    GetRulingByIdHandler ..> RulingDto : returns
    GetRelatedRulingsHandler ..> GetRelatedRulingsQuery : handles
    GetRelatedRulingsHandler ..> RelatedRulingDto : returns

    %% Behavior implements IPipelineBehavior
    ValidationBehavior --|> IPipelineBehavior
    LoggingBehavior --|> IPipelineBehavior

    %% Handler uses services
    SearchRulingsHandler --> ISearchService : uses
    SearchRulingsHandler --> IEmbeddingService : uses
    SearchRulingsHandler --> IMapper : uses
    GetRulingByIdHandler --> IRulingRepository : uses
    GetRulingByIdHandler --> IMapper : uses
    GetRelatedRulingsHandler --> ISearchService : uses
    GetRelatedRulingsHandler --> IRulingRepository : uses
    GetRelatedRulingsHandler --> IEmbeddingService : uses
    GetRelatedRulingsHandler --> IMapper : uses

    %% Result contains DTOs
    SearchRulingsResult *-- RulingSearchResultDto : Results
